# ai-verkenner

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  dashboard_service.py  deps.py  digests.py  feedback.py  graph.py  health.py  horizon.py  items.py  sources.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  neo4j.py  qdrant.py  qdrant_index.py  sqlite.py
backend/app/digests/: __init__.py  generator.py  render.py  retrieve.py  sections.py
backend/app/embeddings/: __init__.py  sentence_transformer.py
backend/app/enrichment/: __init__.py  enricher.py  fallback.py  graph_store.py  parse.py  prompts.py  provider.py
backend/app/graph/: __init__.py  memory.py  neo4j_store.py  projection.py  store.py  util.py
backend/app/ingestion/: __init__.py  orchestrator.py  star_velocity_store.py
backend/app/ingestion/fetchers/: __init__.py  arxiv.py  github_intelligence.py  github_releases.py  rss.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  api.py  enrichment.py  raw_item.py  source.py
backend/app/scoring/: __init__.py  feedback.py  graph_signals.py  priority.py  ranking.py  scales.py
backend/app/sources/: __init__.py  registry.py
backend/app/storage/: __init__.py  dedup.py  hashing.py  pipeline.py  repository.py
backend/tests/: conftest.py  graph_helpers.py  test_dashboard_api.py  test_db_clients.py  test_digest.py  test_enrichment.py  test_enrichment_parse.py  test_feedback.py  test_github_intelligence.py  test_graph_projection.py  test_graph_signals.py  test_hashing.py  test_health.py  test_ingestion.py  test_priority.py  test_qdrant_index.py  test_ranking.py  test_sources_api.py  test_sources_registry.py  test_storage_dedup.py  test_storage_pipeline.py  test_storage_repository.py
backend/tests/fixtures/: github_releases.json  rss_sample.xml  sources_valid.yaml
docs/: AI_VERKENNER_PROJECT_BRIEF.md  IMPLEMENTATION_PLAN.md  PHASE_1_PLAN.md  PRD.md  PROJECT_STATE.md  SIGNATURE_OUTPUTS.md  TECHNICAL_DESIGN.md  USER_CONTEXT.md  m5.5-rerun-notes.md  m6-smoke-notes.md  m6.5-run-notes.md  m7-digest-notes.md
docs/decisions/: 0000-template.md  0001-graph-vector-visual-stack.md  0002-mcp-server-and-github-intelligence.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
prompts/: classify_item.md  digest.md  extract_graph.md  summarise_item.md  weak_signal.md
sources/: sources.yaml
tasks/: 001-repo-scaffold.md  002-source-registry.md  003-rss-github-ingestion.md  004-storage-deduplication.md  005-llm-enrichment.md  006-react-dashboard.md  007-feedback-actions.md  008-weekly-digest.md  m2-infra-up.md  m5-graph-write.md  m5.5-convergence-quality.md  m6.5-source-breadth.md
(+29 files in other folders)
