[project]
name = "ai-verkenner"
version = "0.1.0"
description = "AI Verkenner — a personal AI intelligence and early-warning system (backend)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "neo4j>=5.20",
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
# Local embedding model. Heavy (pulls torch); kept optional so tests/CI stay light and never
# download a model — the deterministic HashingEmbedder needs none. Install for real runs:
#   pip install -e ".[embeddings]"
embeddings = [
    "sentence-transformers>=2.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
